# actix_tera_page

./: Cargo.toml  LICENSE.txt  README.md
examples/: navbar.rs
examples/templates/: base.html
examples/templates/pages/: index.html  other-page.html
src/: lib.rs
